# pyiwsl

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
src/pyiwsl/: __init__.py
tests/: test_basic.py
