[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyiwsl"
version = "0.0.1"
description = "pyiwsl package"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Duhwan Hwang", email = "naemduu@snu.ac.kr" }]
license = { text = "MIT" }
dependencies = []

[project.urls]
Repository = "https://github.com/naemduu/pyiwsl"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]